--- a/src/content/blog/2023-06-01.md
+++ b/src/content/blog/2023-06-01.md
@@ -1,23 +1,31 @@
 ---
 author: Adina Foxova
 pubDatetime: 2023-06-21T15:22:00Z
-title: Building a personal brand
-postSlug: building-personal-brand
+title: Testing page + todo
+postSlug: update-blog
 featured: true
 draft: false
 tags:
   - branding
 ogImage: ""
-description: I‘ve just deployed this and looking around.
+description: This is a todo for future works on this blog.
 ---
 
-How to present yourself? How to make sure whatever you put out there is recognizably yours? And what would that even mean?
+This blog running on Astro Paper does need a little bit of work to match my brand and use-case. I really love the fact that it takes MD files as input. There are things I do need to fix tho. Let‘s get to it.
 
-## Frontmatter
+## Intro
 
-Frontmatter is the main place to store some important information about the post (article). Frontmatter lies at the top of the article and is written in YAML format. Read more about frontmatter and its usage in [astro documentation](https://docs.astro.build/en/guides/markdown-content/).
+Everything is stored in this [github repo - adina.blog](https://github.com/adinafxv/adina.blog), and deployed by Vercel directly to [adina.blog](https://adina.blog).
 
-Here is the list of frontmatter property for each post.
+## Todo
+
+### Design
+
+There are still things I need to figure out
+
+- About page
+- Contacts page
+- CV? Will I even add them there?
 
 | Property          | Description                                                                     | Remark                                        |
 | ----------------- | ------------------------------------------------------------------------------- | --------------------------------------------- |
@@ -97,6 +105,38 @@ Here are some recommendations, tips & ticks for creating new posts in AstroPaper
 There's one thing to note about headings. The AstroPaper blog posts use title (title in the frontmatter) as the main heading of the post. Therefore, the rest of the heading in the post should be using h2 \~ h6.
 
 This rule is not mandatory, but highly recommended for visual, accessibility and SEO purposes.
+
+### Heading 3
+
+#### Heading 4
+
+This is a paragraph.
+
+- henlo
+- dashed list
+
+<section class="note drawn arrow-whoosh">
+this is a little note in handdrawn style
+</section>
+
+<section class="note tech">
+this is a little note in tech style
+</section>
+
+Here a little paragraph, just to make sure this works
+
+Here you go.
+
+<section class="note drawn arrow">
+this is a little note in handdrawn style
+</section>
+
+<section class="note tech">
+  <ul><strong>Resources</strong>
+    <li><a href="#">Resource 1</a></li>
+    <li><a href="#">Resource 1</a></li>
+  </ul>
+</section>
 
 ## Bonus
 
